fixed spot container height clipping

--- a/frontend/src/components/ManageSpots.css
+++ b/frontend/src/components/ManageSpots.css
@@ -14,6 +14,7 @@
         grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
         margin-left: 10%;
         margin-right: 10%;
+        height: 500px;
     }
 }
 
